# JustObjectDetection

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  captureThread.cpp  captureThread.h  main.cpp  utilities.cpp  utilities.h
Headers/: captureThread.h
Sources/: MainWindow.cpp  captureThread.cpp  utilities.cpp
